--- a/src/app/shared/components/settings/settings.component.html
+++ b/src/app/shared/components/settings/settings.component.html
@@ -1,11 +1,11 @@
 <div class="icon-nav">
-  <ul>
-    <li class="onhover-div mobile-search search-widgets" id="search-widgets">
-      <div>
-        <img src="assets/images/icon/search.png" class="img-fluid" alt="">
-        <i class="ti-search"></i>
-      </div>
-    </li>
+    <ul>
+        <li class="onhover-div mobile-search search-widgets" id="search-widgets">
+            <div>
+                <img src="assets/images/icon/search.png" class="img-fluid" alt="">
+                <i class="ti-search"></i>
+            </div>
+        </li>
         <!-- <li class="onhover-div mobile-setting">
             <div><img src="assets/images/icon/setting.png" class="img-fluid" alt="settong">
                 <i class="ti-settings"></i></div>
@@ -24,56 +24,55 @@
                 </ul>
             </div>
         </li> -->
-    <li class="onhover-div mobile-cart">
-      <div>
-        <a [routerLink]="['/shop/cart']">
-          <img src="assets/images/icon/cart.png" class="img-fluid" alt="">
-          <i class="ti-shopping-cart"></i>
-        </a>
-      </div>
-      <span class="cart_qty_cls">{{ productSizeColor.length }}</span>
-      <ul class="show-div shopping-cart" *ngIf='!productSizeColor.length'>
-        <h5>Your cart is currently empty.</h5>
-      </ul>
-      <ul class="show-div shopping-cart">
-        <li *ngFor="let product of productSizeColor">
-          <div class="media">
-            <!-- [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]" -->
-            <a>
-              <img class="mr-3"
-                [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]">
-              <!-- [alt]="product?.images[0].alt" -->
-            </a>
-            <div class="media-body">
-              <!-- [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]" -->
-              <a>
-                <h4>{{ product?.productname }}</h4>
-              </a>
-              <h4>
-                <span>
+        <li class="onhover-div mobile-cart">
+            <div>
+                <a [routerLink]="['/shop/cart']">
+                    <img src="assets/images/icon/cart.png" class="img-fluid" alt="">
+                    <i class="ti-shopping-cart"></i>
+                </a>
+            </div>
+            <span class="cart_qty_cls">{{ productSizeColor?.length }}</span>
+            <!-- <ul class="show-div shopping-cart" *ngIf='!productSizeColor.length'>
+                <h5>Your cart is currently empty.</h5>
+            </ul> -->
+            <ul class="show-div shopping-cart" *ngIf='productSizeColor?.length>0'>
+                <li *ngFor="let product of productSizeColor">
+                    <div class="media">
+                        <!-- [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]" -->
+                        <a>
+                            <img class="mr-3" [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]">
+                            <!-- [alt]="product?.images[0].alt" -->
+                        </a>
+                        <div class="media-body">
+                            <!-- [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]" -->
+                            <a>
+                                <h4>{{ product?.productName }}</h4>
+                            </a>
+                            <h4>
+                                <span>
                   {{ product?.quantity }} x
                   {{ product?.salePrice  | currency:productService?.Currency.currency:'symbol' }}
                 </span>
-              </h4>
-            </div>
-          </div>
-          <div class="close-circle" (click)="removeItem(product)">
-            <a href="javascript:void(0)"><i class="fa fa-times" aria-hidden="true"></i></a>
-          </div>
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="close-circle" (click)="removeItem(product)">
+                        <a href="javascript:void(0)"><i class="fa fa-times" aria-hidden="true"></i></a>
+                    </div>
+                </li>
+                <li>
+                    <div class="total">
+                        <h5>subtotal : <span>{{ getTotal() | currency:productService?.Currency.currency:'symbol' }}</span>
+                        </h5>
+                    </div>
+                </li>
+                <li>
+                    <div class="buttons">
+                        <a [routerLink]="['/shop/cart']" class="view-cart">view cart</a>
+                        <a class="checkout" [routerLink]="['/shop/checkout']">checkout</a>
+                    </div>
+                </li>
+            </ul>
         </li>
-        <li>
-          <div class="total">
-            <h5>subtotal : <span>{{ getTotal | async | currency:productService?.Currency.currency:'symbol' }}</span>
-            </h5>
-          </div>
-        </li>
-        <li>
-          <div class="buttons">
-            <a [routerLink]="['/shop/cart']" class="view-cart">view cart</a>
-                        <a class="checkout" (click)="ProceedToCheckout()">checkout</a>
-          </div>
-        </li>
-      </ul>
-    </li>
-  </ul>
+    </ul>
 </div>
