--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -1,9 +1,9 @@
 <!-- breadcrumb start -->
-<app-breadcrumb [title]="'404 page'" [breadcrumb]="'404 page'" *ngIf="!orderDetails"></app-breadcrumb>
+<app-breadcrumb [title]="'404 page'" [breadcrumb]="'404 page'" *ngIf="orderDetails?.length==0"></app-breadcrumb>
 <!-- breadcrumb End -->
 
 <!-- section start -->
-<section class="p-0" *ngIf="!orderDetails">
+<section class="p-0" *ngIf="orderDetails?.length==0">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -19,15 +19,15 @@
 <!-- Section ends -->
 
 <!-- thank-you section start -->
-<section class="section-b-space light-layout" *ngIf="orderDetails">
+<section class="section-b-space light-layout" *ngIf="orderDetails?.length>0">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="success-text">
                     <i class="fa fa-check-circle" aria-hidden="true"></i>
                     <h2>thank you</h2>
-                    <p>Payment is has been received Order Placed Successfully</p>
-                    <p>Transaction ID:{{ orderDetails.orderId }}</p>
+                    <p>Payment has been received and Order Placed Successfully</p>
+                    <p>Transaction ID:{{ orderDetails[0].orderNumber }}</p>
                 </div>
             </div>
         </div>
@@ -36,44 +36,69 @@
 <!-- Section ends -->
 
 <!-- order-detail section start -->
-<section class="section-b-space" *ngIf="orderDetails">
+<section class="section-b-space" *ngIf="orderDetails?.length>0">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
                 <div class="product-order">
                     <h3>your order details</h3>
-                    <div class="row product-order-detail" *ngFor="let product of orderDetails.product">
-                        <div class="col-3">
-                            <img [src]="product.images[0].src" alt="" class="img-fluid">
+                    <div class="row product-order-detail">
+                        <div class="col-4 order_detail">
+                            <h4>Product Image</h4>
+                        </div>
+                        <div class="col-4 order_detail">
+                            <h4>product name</h4>
+                        </div>
+                        <div class="col-1 order_detail">
+                            <h4>Qty</h4>
                         </div>
                         <div class="col-3 order_detail">
+                            <h4>price</h4>
+                        </div>
+                    </div>
+                    <div class="row product-order-detail" *ngFor="let product of orderDetails[0].orderDetails">
+                        <div class="col-4">
+                            <!-- <img [src]="product.productImg[0]" alt="" class="img-fluid"> -->
+                            <img [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]"
+                                class="img-fluid">
+                        </div>
+                        <div class="col-4 order_detail">
                             <div>
-                                <h4>product name</h4>
-                                <h5>{{ product.title }}</h5>
+                                <!-- <h4>product name</h4> -->
+                                <h5>{{ product?.productName }} ({{ product?.color }} - {{ product?.size }})</h5>
                             </div>
                         </div>
-                        <div class="col-3 order_detail">
+                        <div class="col-1 order_detail">
                             <div>
-                                <h4>quantity</h4>
+                                <!-- <h4>Qty</h4> -->
                                 <h5>{{ product.quantity }}</h5>
                             </div>
                         </div>
                         <div class="col-3 order_detail">
                             <div>
-                                <h4>price</h4>
-                                <h5>{{ product?.price * productService?.Currency?.price | discount:product | currency:productService?.Currency.currency:'symbol' }}</h5>
+                                <!-- <h4>price</h4> -->
+                                <h5>{{ product?.price * productService?.Currency?.price | discount:product | currency:productService?.Currency.currency:'symbol' }}
+                                </h5>
                             </div>
                         </div>
                     </div>
                     <div class="total-sec">
                         <ul>
-                            <li>Subtotal <span>{{ orderDetails.totalAmount | currency:productService?.Currency.currency:'symbol' }}</span></li>
-                            <li>Shipping <span>$00.00</span></li>
-                            <li>Tax <span>$00.00</span></li>
+                            <li>Subtotal
+                                <span>{{ orderDetails[0].subTotal | currency:productService?.Currency.currency:'symbol' }}</span>
+                            </li>
+                            <li>Shipping
+                                <span>{{ orderDetails[0].shippingCharge>0 ? (orderDetails[0].shippingCharge  | currency:productService?.Currency.currency:'symbol') : 'Free Shipping'}}</span>
+                            </li>
+                            <li>GST (18%)
+                                <span>{{ orderDetails[0].tax  | currency:productService?.Currency.currency:'symbol'}}</span>
+                            </li>
                         </ul>
                     </div>
                     <div class="final-total">
-                        <h3>total <span>{{ orderDetails.totalAmount | currency:productService?.Currency.currency:'symbol' }}</span></h3>
+                        <h3>total
+                            <span>{{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}</span>
+                        </h3>
                     </div>
                 </div>
             </div>
@@ -82,29 +107,32 @@
                     <div class="col-sm-6">
                         <h4>summery</h4>
                         <ul class="order-detail">
-                            <li>order ID: {{ orderDetails.orderId }}</li>
-                            <li>Order Date: October 22, 2021</li>
-                            <li>Order Total: {{ orderDetails.totalAmount | currency:productService?.Currency.currency:'symbol' }}</li>
+                            <li>order ID: {{ orderDetails[0].orderNumber }}</li>
+                            <li>Order Date: {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
+                            <li>Order Total:
+                                {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
+                            </li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
                         <h4>shipping address</h4>
                         <ul class="order-detail">
-                            <li>{{ orderDetails.shippingDetails.address }}</li>
-                            <li>{{ orderDetails.shippingDetails.state }}</li>
-                            <li>{{ orderDetails.shippingDetails.country }}, {{ orderDetails.shippingDetails.postalcode }}</li>
-                            <li>Contact No. {{ orderDetails.shippingDetails.phone }}</li>
+                            <li>{{ orderDetails[0].address }}</li>
+                            <li>{{ orderDetails[0].state }}</li>
+                            <li>{{ orderDetails[0].country }}, {{ orderDetails[0].zipCode }}</li>
+                            <li>Contact No. {{ orderDetails[0].phone }}</li>
                         </ul>
                     </div>
 
                     <div class="col-sm-12 payment-mode">
                         <h4>payment method</h4>
-                        <p>Pay on Delivery (Cash/Card). Cash on delivery (COD) available. Card/Net banking acceptance subject to device availability.</p>
+                        <p>Pay on Delivery (Cash/Card). Cash on delivery (COD) available. Card/Net banking acceptance
+                            subject to device availability.</p>
                     </div>
                     <div class="col-md-12">
                         <div class="delivery-sec">
                             <h3>expected date of delivery</h3>
-                            <h2>March 21, 2021</h2>
+                            <h2>{{ orderDetails[0].orderDate | date : 'MMM dd, yyyy' }}</h2>
                         </div>
                     </div>
                 </div>
