--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'Login'" [breadcrumb]="'Login'"></app-breadcrumb>
+<!-- <app-breadcrumb [title]="'Login'" [breadcrumb]="'Login'"></app-breadcrumb> -->
 <!-- section start -->
 <section class="login-page section-b-space">
     <div class="container">
@@ -16,6 +16,7 @@
                             <input type="password" class="form-control" id="review" formControlName="password" placeholder="Enter your password" required>
                         </div>
                         <button class="btn btn-solid" (click)="Login()">Login</button>
+                        <button class="btn btn-solid" style="float:right;" (click)="close()">Close</button>
                     </form>
                 </div>
             </div>
@@ -24,7 +25,7 @@
                 <div class="theme-card authentication-right">
                     <h6 class="title-font">Create A Account</h6>
                     <p>Sign up for a free account at our store. Registration is quick and easy. It allows you to be able to order from our shop. To start shopping click register.</p>
-                    <button class="btn btn-solid" [routerLink]="['/pages/register']">Create an Account</button>
+                    <button class="btn btn-solid" (click)="Register();">Create an Account</button>
                 </div>
             </div>
         </div>
