--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -20,7 +20,7 @@
               <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a>
             </li>
                         <li class="mobile-wishlist" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
-                            <a [routerLink]="['/pages/login']"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
+                            <a (click)="Login()"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
                         </li>
                         <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
               <i class="fa fa-user" aria-hidden="true"></i> My Account
