--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -29,7 +29,7 @@
                                 </a>
                             </td>
                             <td>
-                                <a>{{ product?.productname| titlecase }}</a>
+                                <a>{{ product?.productName| titlecase }} ({{ product?.color| titlecase }} - {{ product?.size| titlecase }})</a>
                                 <div class="mobile-cart-content row">
                                     <div class="col-xs-3">
                                         <div class="qty-box">
@@ -55,26 +55,26 @@
                             </td>
                             <td>
                                 <h2>
-                                    {{ (product.salePrice )  | currency:productService?.Currency.currency:'symbol' }}
+                                    {{ (product.salePrice ) | currency:productService?.Currency.currency:'symbol' }}
                                 </h2>
                             </td>
                             <td>
                                 <div class="qty-box">
                                     <div class="input-group">
-                                        <span class="input-group-prepend">
+                                        <!-- <span class="input-group-prepend">
                                             <button type="button" class="btn quantity-left-minus" data-type="minus"
                                                 (click)="decrement(product)">
                                                 <i class="ti-angle-left"></i>
                                             </button>
-                                        </span>
+                                        </span> -->
                                         <input type="text" name="quantity" class="form-control input-number" disabled
                                             [(ngModel)]="product.quantity">
-                                        <span class="input-group-prepend">
+                                        <!-- <span class="input-group-prepend">
                                             <button type="button" class="btn quantity-right-plus" data-type="plus"
                                                 (click)="increment(product)">
                                                 <i class="ti-angle-right"></i>
                                             </button>
-                                        </span>
+                                        </span> -->
                                     </div>
                                 </div>
                             </td>
@@ -85,7 +85,7 @@
                             </td>
                             <td>
                                 <h2 class="td-color">
-                                    {{ (product.salePrice * product.quantity)  | currency:productService?.Currency.currency:'symbol' }}
+                                    {{ (product.salePrice * product.quantity) | currency:productService?.Currency.currency:'symbol' }}
                                 </h2>
                             </td>
                         </tr>
@@ -96,7 +96,7 @@
                         <tr>
                             <td>total price :</td>
                             <td>
-                                <h2> {{ getTotal | async | currency:productService?.Currency.currency:'symbol'}}</h2>
+                                <h2> {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</h2>
                             </td>
                         </tr>
                     </tfoot>
