--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -41,7 +41,6 @@
                     *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
                     <ng-template carouselSlide [id]="i">
                       <div>
-
                         <img [defaultImage]="'assets/images/product/placeholder.jpg'"
                           [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
                           [alt]="image.alt" class="img-fluid">
@@ -59,7 +58,7 @@
                           <div class="owl-thumb" [class.active]="i == activeSlide">
                             <img [defaultImage]="'assets/images/product/placeholder.jpg'"
                               [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                              [alt]="image.alt" class="img-fluid" (click)="owlCar.to(activeSlide1 = i.toString())">
+                              [alt]="image.alt" class="img-fluid" (click)="owlCar.to(activeSlide = i.toString())">
                           </div>
                         </ng-template>
                       </ng-container>
@@ -83,7 +82,7 @@
                       *ngFor="let color of Color(productkart[0]?.productSizeColor); index as i"
                       [ngStyle]="{'background-color': color}" (click)="changecolor(i.toString())"> </li>
                   </ul>
-                  <!-- <app-stock-inventory [stock]="productkart[0]?.qty"></app-stock-inventory> commented on 22 july by deepak -->
+                  <app-stock-inventory [stock]="productkart[0]?.qty"></app-stock-inventory>
                   <div class="product-description border-product">
                     <h6 class="product-title size-text">
                       select size
@@ -91,59 +90,7 @@
                         <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size chart</a>
                       </span>
                     </h6>
-
-                    <table class="table table-bordered table-hover">
-                      <thead class="thead-dark">
-                        <tr>
-                          <th *ngFor="let column of headers" class="thead-dark">
-                            {{column}}
-                          </th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
-                          <td>
-                            <input type="checkbox" [(ngModel)]="item.isSelected" name="checkIn"
-                              [value]="item.productSizeId" id="{{myIndex}}"
-                              (ngModelChange)="fnCheck(item,$event,myIndex)">
-                          </td>
-                          <td>
-                            {{item.color}}
-                          </td>
-                          <td>
-                            {{item.size}}
-                          </td>
-                          <td>
-
-                            <div class="qty-box">
-                              <div class="input-group">
-                                <span class="input-group-prepend">
-                                  <button type="button" class="btn quantity-left-minus" data-type="minus"
-                                    (click)="decrement(myIndex,item)">
-                                    <i class="ti-angle-left"></i>
-                                  </button>
-                                </span>
-                                <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}"
-                                  class="form-control input-number" [value]="item.selectedQty" disabled />
-                                <span class="input-group-prepend">
-                                  <button type="button" class="btn quantity-right-plus" data-type="plus"
-                                    (click)="increment(myIndex,item)">
-                                    <i class="ti-angle-right"></i>
-                                  </button>
-                                </span>
-                              </div>
-                            </div>
-                          </td>
-                          <td>
-                            <h5 class="avalibility" *ngIf="item.selectedQty <=item?.qty"><span>In Stock</span></h5>
-                            <h5 class="avalibility" *ngIf="item.selectedQty > item?.qty"><span>Out of Stock</span></h5>
-                          </td>
-                        </tr>
-                      </tbody>
-
-                    </table>
-
-                    <!-- <div class="size-box">
+                    <div class="size-box">
                       <ul>
                         <li [class.active]="selectedSize == size"
                           *ngFor="let size of Size(productkart[0]?.productSizeColor)">
@@ -152,8 +99,8 @@
                           </a>
                         </li>
                       </ul>
-                    </div> -->
-                    <!-- <h5 class="avalibility" *ngIf="counter <= productkart[0]?.qty"><span>In Stock</span></h5>
+                    </div>
+                    <h5 class="avalibility" *ngIf="counter <= productkart[0]?.qty"><span>In Stock</span></h5>
                     <h5 class="avalibility" *ngIf="counter > productkart[0]?.qty"><span>Out of Stock</span></h5>
                     <h6 class="product-title">quantity</h6>
                     <div class="qty-box">
@@ -171,14 +118,14 @@
                           </button>
                         </span>
                       </div>
-                    </div> -->
+                    </div>
                   </div>
                   <div class="product-buttons">
-                    <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="counter >  productkart[0]?.qty"
-                      (click)="addToCart(1)">add
+                    <a href="javascrip:void(0)" class="btn btn-solid"
+                      [class.disabled]="counter >  productkart[0]?.qty">add
                       to cart</a>
                     <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="counter >  productkart[0]?.qty"
-                      (click)="addToCart(2)">buy now</a>
+                      (click)="buyNow(productkart[0])">buy now</a>
                   </div>
                   <div class="border-product">
                     <h6 class="product-title">product details</h6>
