--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -3,15 +3,15 @@
   <div class="top-header" *ngIf="topbar">
     <div class="container">
       <div class="row">
-                <div class="col-lg-7">
+        <div class="col-lg-7">
           <div class="header-contact">
             <ul>
-                            <li>VIKRAM CREATIONS PRIVATE LIMITED</li>
+              <li>VIKRAM CREATIONS PRIVATE LIMITED</li>
               <li><i class="fa fa-phone" aria-hidden="true"></i>Call Us: 123 - 456 - 7890</li>
             </ul>
           </div>
         </div>
-                <div class="col-lg-5 text-right">
+        <div class="col-lg-5 text-right">
           <ul class="header-dropdown">
             <li class="compare">
               <a [routerLink]="['/shop/compare']"><i class="fa fa-random" aria-hidden="true"></i>Compare</a>
@@ -19,19 +19,20 @@
             <li class="mobile-wishlist">
               <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a>
             </li>
-                        <li class="mobile-wishlist" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
-                            <a (click)="Login()"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
-                        </li>
-                        <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
+            <li class="mobile-wishlist" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
+              <a (click)="Login()"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
+            </li>
+            <li class="onhover-dropdown mobile-account"
+              *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
               <i class="fa fa-user" aria-hidden="true"></i> My Account
               <ul class="onhover-show-div">
                 <li>
-                                    <a data-lng="en" [routerLink]="['/pages/dashboard']">
+                  <a data-lng="en" [routerLink]="['/pages/dashboard']">
                     Dashboard
                   </a>
                 </li>
                 <li>
-                                    <a data-lng="es" (click)="Logout()">
+                  <a data-lng="es" (click)="Logout()">
                     Logout
                   </a>
                 </li>
