--- a/src/assets/scss/theme/_style.scss
+++ b/src/assets/scss/theme/_style.scss
@@ -7311,7 +7311,7 @@ footer {
                 border-radius: 50%;
                 margin-right: 10px;
                 cursor: pointer;
-                border: 1px solid $grey-about;
+                border: 1px solid #6664;
                 text-align: center;
                 a {
                     color: $dark-font;
