--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -35,68 +35,51 @@
                             <div class="row check-out">
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">First Name</div>
-                                    <input type="text" name="fName" [formControl]="checkoutForm.controls['fName']"
-                                        value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="(checkoutForm.controls.fName.touched || Submitted) && checkoutForm.controls.fName.errors?.required"
-                                        class="text text-danger">
+                                    <input type="text" name="fName" [formControl]="checkoutForm.controls['fName']" value="" placeholder="" autocomplete="off">
+                                    <div *ngIf="(checkoutForm.controls.fName.touched || Submitted) && checkoutForm.controls.fName.errors?.required" class="text text-danger">
                                         First Name is required.
                                     </div>
-                                    <div *ngIf="(checkoutForm.controls.fName.touched || Submitted) && checkoutForm.controls.fName.errors?.pattern"
-                                        class="text text-danger">
+                                    <div *ngIf="(checkoutForm.controls.fName.touched || Submitted) && checkoutForm.controls.fName.errors?.pattern" class="text text-danger">
                                         First Name must be an alphabates.
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Last Name </div>
-                                    <input type="text" name="lName" [formControl]="checkoutForm.controls['lName']"
-                                        value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="(checkoutForm.controls.lName.touched || Submitted) && checkoutForm.controls.lName.errors?.required"
-                                        class="text text-danger">
+                                    <input type="text" name="lName" [formControl]="checkoutForm.controls['lName']" value="" placeholder="" autocomplete="off">
+                                    <div *ngIf="(checkoutForm.controls.lName.touched || Submitted) && checkoutForm.controls.lName.errors?.required" class="text text-danger">
                                         Last Name is required.
                                     </div>
-                                    <div *ngIf="(checkoutForm.controls.lName.touched || Submitted) && checkoutForm.controls.lName.errors?.pattern"
-                                        class="text text-danger">
+                                    <div *ngIf="(checkoutForm.controls.lName.touched || Submitted) && checkoutForm.controls.lName.errors?.pattern" class="text text-danger">
                                         Last Name must be an alphabates.
                                     </div>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Company Name </div>
-                                    <input type="text" name="companyName"
-                                        [formControl]="checkoutForm.controls['companyName']" value="" placeholder=""
-                                        autocomplete="off">
-                                    <div *ngIf="(checkoutForm.controls.companyName.touched || Submitted) && checkoutForm.controls.companyName.errors?.required"
-                                        class="text text-danger">
+                                    <input type="text" name="companyName" [formControl]="checkoutForm.controls['companyName']" value="" placeholder="" autocomplete="off">
+                                    <div *ngIf="(checkoutForm.controls.companyName.touched || Submitted) && checkoutForm.controls.companyName.errors?.required" class="text text-danger">
                                         Company Name is required.
                                     </div>
-                                    <div *ngIf="(checkoutForm.controls.companyName.touched || Submitted) && checkoutForm.controls.companyName.errors?.pattern"
-                                        class="text text-danger">
+                                    <div *ngIf="(checkoutForm.controls.companyName.touched || Submitted) && checkoutForm.controls.companyName.errors?.pattern" class="text text-danger">
                                         Company Name must be an alphabates.
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">Phone</div>
-                                    <input type="text" name="phone" maxlength="10"
-                                        [formControl]="checkoutForm.controls['phone']" value="" placeholder=""
-                                        autocomplete="off">
-                                    <div *ngIf="(checkoutForm.controls.phone.touched || Submitted) && checkoutForm.controls.phone.errors?.required"
-                                        class="text text-danger">
+                                    <input type="text" name="phone" maxlength="10" [formControl]="checkoutForm.controls['phone']" value="" placeholder="" autocomplete="off">
+                                    <div *ngIf="(checkoutForm.controls.phone.touched || Submitted) && checkoutForm.controls.phone.errors?.required" class="text text-danger">
                                         Phone No is required.
                                     </div>
-                                    <div *ngIf="(checkoutForm.controls.phone.touched || Submitted) && checkoutForm.controls.phone.errors?.pattern"
-                                        class="text text-danger">
+                                    <div *ngIf="(checkoutForm.controls.phone.touched || Submitted) && checkoutForm.controls.phone.errors?.pattern" class="text text-danger">
                                         Phone No is must be number.
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
                                     <div class="field-label">emailId Address</div>
-                                    <input type="text" name="emailId" [formControl]="checkoutForm.controls['emailId']"
-                                        value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="(checkoutForm.controls.emailId.touched || Submitted) && checkoutForm.controls.emailId.errors?.required"
-                                        class="text text-danger">
+                                    <input type="text" name="emailId" [formControl]="checkoutForm.controls['emailId']" value="" placeholder="" autocomplete="off">
+                                    <div *ngIf="(checkoutForm.controls.emailId.touched || Submitted) && checkoutForm.controls.emailId.errors?.required" class="text text-danger">
                                         EmailId is required
                                     </div>
-                                    <div *ngIf="(checkoutForm.controls.emailId.touched || Submitted) && checkoutForm.controls.emailId.errors?.emailId"
-                                        class="text text-danger">
+                                    <div *ngIf="(checkoutForm.controls.emailId.touched || Submitted) && checkoutForm.controls.emailId.errors?.emailId" class="text text-danger">
                                         Invalid emailId
                                     </div>
                                 </div>
@@ -108,49 +91,39 @@
                                         <option value="USA">USA</option>
                                         <option value="Australia">Australia</option>
                                     </select>
-                                    <div *ngIf="(checkoutForm.controls.country.touched || Submitted) && checkoutForm.controls.country.errors?.required"
-                                        class="text text-danger">
+                                    <div *ngIf="(checkoutForm.controls.country.touched || Submitted) && checkoutForm.controls.country.errors?.required" class="text text-danger">
                                         Country is required
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-6">
                                     <div class="field-label">State</div>
-                                    <input type="text" name="state" [formControl]="checkoutForm.controls['state']"
-                                        value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="(checkoutForm.controls.state.touched || Submitted) && checkoutForm.controls.state.errors?.required"
-                                        class="text text-danger">
+                                    <input type="text" name="state" [formControl]="checkoutForm.controls['state']" value="" placeholder="" autocomplete="off">
+                                    <div *ngIf="(checkoutForm.controls.state.touched || Submitted) && checkoutForm.controls.state.errors?.required" class="text text-danger">
                                         State is required
                                     </div>
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Address</div>
-                                    <textarea name="address" [formControl]="checkoutForm.controls['address']"
-                                        style="height: 65px;" value="" placeholder="" autocomplete="off"></textarea>
-                                    <div *ngIf="(checkoutForm.controls.address.touched || Submitted) && checkoutForm.controls.address.errors?.required"
-                                        class="text text-danger">
+                                    <textarea name="address" [formControl]="checkoutForm.controls['address']" style="height: 65px;" value="" placeholder="" autocomplete="off"></textarea>
+                                    <div *ngIf="(checkoutForm.controls.address.touched || Submitted) && checkoutForm.controls.address.errors?.required" class="text text-danger">
                                         Address is required
                                     </div>
-                                    <div *ngIf="(checkoutForm.controls.address.touched || Submitted) && checkoutForm.controls.address.errors?.maxlength"
-                                        class="text text-danger">
+                                    <div *ngIf="(checkoutForm.controls.address.touched || Submitted) && checkoutForm.controls.address.errors?.maxlength" class="text text-danger">
                                         Maximum 50 character
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-6">
                                     <div class="field-label">city/City</div>
-                                    <input type="text" name="city" [formControl]="checkoutForm.controls['city']"
-                                        value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="(checkoutForm.controls.city.touched || Submitted) && checkoutForm.controls.city.errors?.required"
-                                        class="text text-danger">
+                                    <input type="text" name="city" [formControl]="checkoutForm.controls['city']" value="" placeholder="" autocomplete="off">
+                                    <div *ngIf="(checkoutForm.controls.city.touched || Submitted) && checkoutForm.controls.city.errors?.required" class="text text-danger">
                                         City is required
                                     </div>
                                 </div>
 
                                 <div class="form-group col-md-6 col-sm-6 col-xs-6">
                                     <div class="field-label">Postal Code</div>
-                                    <input type="text" name="zipCode" [formControl]="checkoutForm.controls['zipCode']"
-                                        value="" placeholder="" autocomplete="off">
-                                    <div *ngIf="(checkoutForm.controls.zipCode.touched || Submitted) && checkoutForm.controls.zipCode.errors?.required"
-                                        class="text text-danger">
+                                    <input type="text" name="zipCode" [formControl]="checkoutForm.controls['zipCode']" value="" placeholder="" autocomplete="off">
+                                    <div *ngIf="(checkoutForm.controls.zipCode.touched || Submitted) && checkoutForm.controls.zipCode.errors?.required" class="text text-danger">
                                         zipCode is required
                                     </div>
                                 </div>
@@ -213,8 +186,7 @@
                                     </div>
                                     <ul class="qty" *ngIf='productSizeColor?.length'>
                                         <li *ngFor="let product of productSizeColor">
-                                            {{ product?.productName }} ({{ product?.color }} - {{ product?.size }}) ×
-                                            {{ product?.quantity }}
+                                            {{ product?.productName }} × {{ product?.quantity }}
                                             <span>
                                                 {{ product.salePrice  | currency:productService?.Currency.currency:'symbol' }}
                                             </span>
@@ -225,12 +197,10 @@
                                     </ul>
                                     <ul class="sub-total">
                                         <li>
-                                            Subtotal <span
-                                                class="count">{{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
+                                            Subtotal <span class="count">{{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                                         </li>
                                         <li>
-                                            GST ({{GST}}%) <span
-                                                class="count">{{ getTotal()*(GST)/100 | currency:productService?.Currency.currency:'symbol'}}</span>
+                                            GST ({{GST}}%) <span class="count">{{ getTotal()*(GST)/100 | currency:productService?.Currency.currency:'symbol'}}</span>
                                         </li>
                                         <li *ngIf='productSizeColor.length'>
                                             Shipping
@@ -248,8 +218,7 @@
                                         </li>
                                     </ul>
                                     <ul class="total">
-                                        <li>Total <span
-                                                class="count">{{ getTotal()+(getTotal()*(GST)/100) | currency:productService?.Currency.currency:'symbol'}}</span>
+                                        <li>Total <span class="count">{{ getTotal()+(getTotal()*(GST)/100) | currency:productService?.Currency.currency:'symbol'}}</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -260,18 +229,14 @@
                                             <ul>
                                                 <li>
                                                     <div class="radio-option">
-                                                        <input type="radio"
-                                                            [formControl]="checkoutForm.controls['paymentTypeId']"
-                                                            [value]="1" name="payment-group" id="payment-1">
+                                                        <input type="radio" [formControl]="checkoutForm.controls['paymentTypeId']" [value]="1" name="payment-group" id="payment-1">
                                                         <label for="payment-1">Cash on Delivery (COD)
                                                         </label>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="radio-option">
-                                                        <input type="radio"
-                                                            [formControl]="checkoutForm.controls['paymentTypeId']"
-                                                            [value]="2" name="payment-group" id="payment-2">
+                                                        <input type="radio" [formControl]="checkoutForm.controls['paymentTypeId']" [value]="2" name="payment-group" id="payment-2">
                                                         <label for="payment-2">Online Payment
                                                         </label>
                                                     </div>
